.provarCaches/00D6C0000000xA6UAI/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>ACD_Queue__c</fullName>
        <description>ACD Queue</description>
        <inlineHelpText>ACD Queue</inlineHelpText>
        <label>ACD Queue</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_On__c</fullName>
        <formula>CASE(LEFT(WhatId,3), 
&quot;001&quot;,&quot;Account&quot;, 
&quot;006&quot;,&quot;Opportunity&quot;, 
&quot;500&quot;,&quot;Case&quot;, 
CASE(LEFT(WhoId,3), 
&quot;003&quot;,&quot;Contact&quot;, 
&quot;00Q&quot;,&quot;Lead&quot;, 
NULL))</formula>
        <inlineHelpText>This field provides description to what object this record belongs to.</inlineHelpText>
        <label>Activity On</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_ID__c</fullName>
        <description>Agent ID</description>
        <inlineHelpText>Agent ID</inlineHelpText>
        <label>Agent ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_ID__c</fullName>
        <description>Call ID</description>
        <inlineHelpText>Call ID</inlineHelpText>
        <label>Call ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Result_Detail_1__c</fullName>
        <inlineHelpText>Details of the call result</inlineHelpText>
        <label>Call Result Detail 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Call_Result__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ARC AP</fullName>
                </value>
                <value>
                    <fullName>Closed Failed to Connect</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Date Availability</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Local Rep</fullName>
                </value>
                <value>
                    <fullName>Not Interested / No Reason Given</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Recently Certified</fullName>
                </value>
                <value>
                    <fullName>Referred</fullName>
                </value>
                <value>
                    <fullName>Bad Contact Info</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Result_Detail_2__c</fullName>
        <inlineHelpText>Details of the call result</inlineHelpText>
        <label>Call Result Detail 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Call_Result_Detail_1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Group Size</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>NAN</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Full Service</fullName>
                </value>
                <value>
                    <fullName>Shopping</fullName>
                </value>
                <value>
                    <fullName>Too High</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>ARC AP</fullName>
                </value>
                <value>
                    <fullName>ARC Community</fullName>
                </value>
                <value>
                    <fullName>ARC Full Service</fullName>
                </value>
                <value>
                    <fullName>Competitor - AP</fullName>
                </value>
                <value>
                    <fullName>Competitor - Full Service</fullName>
                </value>
                <value>
                    <fullName>Competitor - Group Size</fullName>
                </value>
                <value>
                    <fullName>Local Rep</fullName>
                </value>
                <value>
                    <fullName>ARC Community - Group Size</fullName>
                </value>
                <value>
                    <fullName>ARC Community - Other</fullName>
                </value>
                <value>
                    <fullName>ARC Community - Price</fullName>
                </value>
                <value>
                    <fullName>Demo - No Fee Class</fullName>
                </value>
                <value>
                    <fullName>Field Non BGST Class</fullName>
                </value>
                <value>
                    <fullName>FO Other</fullName>
                </value>
                <value>
                    <fullName>RCO Website</fullName>
                </value>
                <value>
                    <fullName>Pending Agreement/Proposal</fullName>
                </value>
                <value>
                    <fullName>Out of Business</fullName>
                </value>
                <value>
                    <fullName>Wrong Email</fullName>
                </value>
                <value>
                    <fullName>Wrong Phone Number</fullName>
                </value>
                <value>
                    <fullName>Wrong POC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Result__c</fullName>
        <inlineHelpText>Result of the call</inlineHelpText>
        <label>Call Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open - Not Yet Worked</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Sale</fullName>
                </value>
                <value>
                    <fullName>No Sale</fullName>
                </value>
                <value>
                    <fullName>No Opportunity</fullName>
                </value>
                <value>
                    <fullName>Not Interested - No Reason Given</fullName>
                </value>
                <value>
                    <fullName>Aged Pipeline Lead</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Source__c</fullName>
        <inlineHelpText>Origin of the call</inlineHelpText>
        <label>Call Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IVR</fullName>
                </value>
                <value>
                    <fullName>TSC Transfer</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Voice Mail</fullName>
                </value>
                <value>
                    <fullName>After-Hours Transfer Lead Form</fullName>
                </value>
                <value>
                    <fullName>Referral/Repeat Business</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Start_Time__c</fullName>
        <description>Call Start Time</description>
        <inlineHelpText>Call Start Time</inlineHelpText>
        <label>Call Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Called__c</fullName>
        <description>Called Phone Number (DNIS)</description>
        <inlineHelpText>Called Phone Number (DNIS)</inlineHelpText>
        <label>Called</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Caller__c</fullName>
        <description>Caller&apos;s Phone Number (ANI)</description>
        <inlineHelpText>Caller&apos;s Phone Number (ANI)</inlineHelpText>
        <label>Caller</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DM_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is utilized to support the data migration process. It will contain a combination of the source system identifier and the source system&apos;s unique record identifier. This field should be deleted after all migration activities are complete.</description>
        <label>DM External ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DM_Legacy_Owner_Name__c</fullName>
        <label>DM Legacy Owner Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delta_Data_Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Checked, this record was migrated as part of the Delta Data migration project</description>
        <inlineHelpText>If Checked, this record was migrated as part of the Delta Data migration project</inlineHelpText>
        <label>Delta Data Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Old_Call_ID__c</fullName>
        <description>Old Call ID</description>
        <inlineHelpText>Old Call ID</inlineHelpText>
        <label>Old Call ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Call_Object_ID__c</fullName>
        <description>Original Call Object ID</description>
        <inlineHelpText>Original Call Object ID</inlineHelpText>
        <label>Original Call Object ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Profile__c</fullName>
        <formula>$Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POM_Campaign__c</fullName>
        <description>POM Campaign Name</description>
        <inlineHelpText>POM Campaign Name</inlineHelpText>
        <label>POM Campaign</label>
        <length>96</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <description>Source System field used for Data Migration.</description>
        <label>Source System</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UUI__c</fullName>
        <description>User to User Information (UUI)</description>
        <inlineHelpText>User to User Information (UUI)</inlineHelpText>
        <label>UUI</label>
        <length>96</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked__Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity</label>
        <referenceTo>sked__Activity__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Job_Allocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Allocation</label>
        <referenceTo>sked__Job_Allocation__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>